feat: add action event

--- a/Jetbrains-Recent-Plugin/Jetbrains-Recent-Plugin.csproj
+++ b/Jetbrains-Recent-Plugin/Jetbrains-Recent-Plugin.csproj
@@ -64,7 +64,7 @@
         <None Update="Images\*.png">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Images\JetBrainsProducts\*.svg">
+        <None Update="Images\*.svg">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
     </ItemGroup>
