--- a/Jetbrains-Recent-PluginTests/Jetbrains-Recent-PluginTests.csproj
+++ b/Jetbrains-Recent-PluginTests/Jetbrains-Recent-PluginTests.csproj
@@ -11,11 +11,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="coverlet.collector" Version="6.0.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0-preview-24080-01" />
-    <PackageReference Include="MSTest.TestAdapter" Version="3.1.1" />
-    <PackageReference Include="MSTest.TestFramework" Version="3.1.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
+    <PackageReference Include="MSTest.TestAdapter" Version="3.5.0" />
+    <PackageReference Include="MSTest.TestFramework" Version="3.5.0" />
+    <PackageReference Include="System.IO.Abstractions" Version="17.2.3" />
   </ItemGroup>
+
 
   <ItemGroup>
     <ProjectReference Include="..\JetBrains-Recent-Plugin\JetBrains-Recent-Plugin.csproj" />
