--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,16 @@
-name: build
+name: Build
 
 on:
+  workflow_dispatch:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    tags:
+      - "[0-9]+.[0-9]+.[0-9]+"
+
+env:
+  PLUGIN_NAME: JetBrains_Recent_Plugin
 
 jobs:
   build:
-
     strategy:
       matrix:
         platform: [x64, ARM64]
@@ -16,36 +18,30 @@ jobs:
     runs-on: windows-latest
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - uses: actions/checkout@v4
+      - name: Read version
+        run: |
+          $version = "v$((Get-Content ./JetBrains-Recent-Plugin/plugin.json | ConvertFrom-Json).Version)"
+          echo "PLUGIN_VERSION=$($version)" >> $env:GITHUB_ENV
+          
 
-      - name: Setup dotnet
+      - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 8.0.x
 
-      - name: Restore dependencies
-        run: dotnet restore
-
       - name: Build
-        run: dotnet build --no-restore
-
-      - name: Build JetBrains-Recent-Plugin
-        run: |
-          dotnet build .\JetBrains-Recent-Plugin\project\ /p:Platform=${{matrix.platform}}
-          dotnet build .\JetBrains-Recent-Plugin\solution\ /p:Platform=${{matrix.platform}}
-
-      - name: Test JetBrains-Recent-Plugin
-        if: ${{matrix.platform == 'x64'}}
-        run: dotnet test .\JetBrains-Recent-Plugin\solution\ /p:Platform=${{matrix.platform}}
+        run: dotnet build JetBrains-Recent-Plugin.sln --configuration Release /p:Platform=${{matrix.platform}} /p:EnableWindowsTargeting=true
 
       - name: Prepare artifact
         run: |
-          mkdir -p artifacts
-          cp -r .\JetBrains-Recent-Plugin\solution\bin\Release\net8.0\* artifacts/
+          Remove-Item -Path Jetbrains-Recent-Plugin/bin/* -Recurse -Include *.xml, *.pdb, PowerToys.*, Wox.*
+          Rename-Item -Path Jetbrains-Recent-Plugin/bin/${{matrix.platform}}/Release -NewName $env:PLUGIN_NAME
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: jetbrains-recent-plugin-${{ matrix.platform }}
-          path: artifacts/
+          name: ${{env.PLUGIN_NAME}}-${{env.PLUGIN_VERSION}}-${{matrix.platform}}
+          path: Jetbrains-Recent-Plugin/bin/${{matrix.platform}}/*
