--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,4 +44,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ${{env.PLUGIN_NAME}}-${{env.PLUGIN_VERSION}}-${{matrix.platform}}
-          path: Jetbrains-Recent-Plugin/bin/${{matrix.platform}}/*
+          path: Jetbrains-Recent-Plugin/bin/${{matrix.platform}}/Release/*
