--- a/Jetbrains-Recent-PluginTests/Jetbrains-Recent-PluginTests.csproj
+++ b/Jetbrains-Recent-PluginTests/Jetbrains-Recent-PluginTests.csproj
@@ -15,6 +15,25 @@
     <PackageReference Include="MSTest.TestAdapter" Version="3.5.0" />
     <PackageReference Include="MSTest.TestFramework" Version="3.5.0" />
     <PackageReference Include="System.IO.Abstractions" Version="17.2.3" />
+    <PackageReference Include="NLog" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="PowerToys.Common.UI">
+      <HintPath>..\..\Lib\PowerToys.Common.UI.dll</HintPath>
+    </Reference>
+    <Reference Include="PowerToys.ManagedCommon">
+      <HintPath>..\..\Lib\PowerToys.ManagedCommon.dll</HintPath>
+    </Reference>
+    <Reference Include="PowerToys.Settings.UI.Lib">
+      <HintPath>..\..\Lib\PowerToys.Settings.UI.Lib.dll</HintPath>
+    </Reference>
+    <Reference Include="Wox.Infrastructure">
+      <HintPath>..\..\Lib\Wox.Infrastructure.dll</HintPath>
+    </Reference>
+    <Reference Include="Wox.Plugin">
+      <HintPath>..\..\Lib\Wox.Plugin.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 
